<resources>
    <string name="app_name" translatable="false">RegattApp</string>

    <string name="test" translatable="false">Test Button</string>

    <string name="home">Welcome!</string>
    <string name="home_sub">Please select a menu :</string>
    <string name="regatta">Launch a regatta</string>
    <string name="main">Main menu</string>

    <string name="boat">Boat setup</string>
    <string name="boat_sub">Please fill the content :</string>
    <string name="type" translatable="false">Type :</string>
    <string-array name="type">
        <item>Sport dinghies</item>
        <item>Keel boats</item>
        <item>Multihull</item>
        <item>Cruising sailboat</item>
        <item>Monohulls</item>
    </string-array>
    <string name="model">Model :</string>
    <string name="unfilled">Model unfilled.</string>
    <string name="fill">Please fill.</string>
    <string name="sail">Sail number :</string>
    <string name="setup">Save</string>

    <string name="path">Regatta</string>
    <string name="path_sub">Please define the route :</string>
    <string name="net">Download (requires internet) :</string>
    <string name="net_load">Update</string>
    <string name="qr" translatable="false">QR Code :</string>
    <string name="qr_load">Camera</string>
    <string name="route">The trail (editable) :</string>
    <string name="start">Start</string>
    <string name="path_error">Path not accepted!</string>

    <string name="weather">Weather</string>
    <string name="reg">Regatta</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>