<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BoatConfActivity">

    <TextView
        android:id="@+id/boat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boat"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.200" />

    <TextView
        android:id="@+id/boat_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boat_sub"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boat" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72sp"
        android:text="@string/type"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boat_sub" />

    <Spinner
        android:id="@+id/type_spin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:entries="@array/type"
        app:layout_constraintBottom_toBottomOf="@+id/type"
        app:layout_constraintStart_toEndOf="@+id/type" />

    <TextView
        android:id="@+id/model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/model"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type" />

    <EditText
        android:id="@+id/model_fill"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="42sp"
        android:hint="@string/fill"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/type_spin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/model"
        app:layout_constraintTop_toBottomOf="@+id/type_spin"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/sail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/sail"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/model" />

    <EditText
        android:id="@+id/sail_num"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="32sp"
        android:hint="@string/fill"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/model_fill"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sail"
        app:layout_constraintTop_toBottomOf="@+id/model_fill"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72sp"
        android:onClick="save"
        android:text="@string/setup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sail_num" />


</androidx.constraintlayout.widget.ConstraintLayout>